# ircd-hybrid

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  BUGS  COPYING  Hybrid-team  INSTALL  INSTALL.md  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.FIRST  README.PLATFORMS  README.md  RELNOTES  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  doxygen.conf  install-sh
.github/: dependabot.yml
.github/workflows/: ci.yml  (+2 more)
contrib/: Makefile.am  Makefile.in  README  README.cloaking  challenge.irc  example_module.c  ip_cloaking.c  ircd-hybrid.spec  ircd.init.in  m_capture.c  m_change.c  m_classlist.c  m_clearchan.c  m_ctrace.c  m_flags.c  m_force.c  m_jupe.c  m_killhost.c  m_ltrace.c  m_mkpasswd.c  m_ojoin.c  m_operspy.c  m_opme.c  m_services.c  m_spoof.c  m_webirc.c  setup-win32.h  spy_admin_notice.c  spy_info_notice.c  spy_links_notice.c  spy_motd_notice.c  spy_stats_notice.c  spy_stats_p_notice.c  spy_trace_notice.c  spy_whois_notice.c  win32build.bat
contrib/help/: Makefile.in
contrib/help/opers/: capture  chghost  chgident  chgname  classlist  clearchan  ctrace  delspoof  flags  forcejoin  forcepart  index  jupe  ltrace  mkpasswd  ojoin  opme  spoof  svsnick  uncapture
contrib/help/users/: index
doc/: CIDR.txt  Doxyfile  LazyLinks.txt  Makefile.am  Makefile.in  Tao-of-IRC.940110  challenge.txt  doxygen.conf  example.conf  example.efnet.conf  example.quick.conf  guidelines.txt  index.txt  ircd.8  kline.txt  messages.txt  modeg.txt  modes.txt  modules.conf  monitor.txt  reference.conf  reference.ircd.conf  reference.modules.conf  resv.txt  server-version-info  serverhide.txt  whats-new.txt  who.txt
etc/: Makefile.am  Makefile.in  example.conf  example.conf.quick  example.efnet.conf  example.quick.conf  simple.conf
help/: Makefile.am  Makefile.in  accept  admin  challenge  close  cmode  connect  die  dline  eob  etrace  extban  gline  gungline  hash  index  info  invite  join  kick  kill  kline  links  list  locops  lusers  module  monitor  motd  names  notice  oper  part  privmsg  rehash  restart  resv  set  squit  (+14 more)
help/opers/: Makefile.am  Makefile.in  cburst  client  cmode  cryptlink  dline  drop  index  info  join  kline  knockll  lljoin  llnick  map  module  motd  nburst  omotd  part  restart  resv  rkline  rxline  set  squit  stats  testmask  trace  umode  undline  ungline  unkline  unresv  unxline  version  who  xline
help/users/: Makefile.am  Makefile.in  index  notice  privmsg  stats  umode
include/: accept.h  auth.h  balloc.h  base32.h  channel.h  channel_invite.h  channel_mode.h  client.h  client_svstag.h  cloak.h  command.h  common.h  conf.h  conf_class.h  conf_cluster.h  conf_db.h  conf_gecos.h  conf_pseudo.h  conf_resv.h  conf_service.h  conf_shared.h  dalloca.h  dbuf.h  defaults.h  event.h  extban.h  fdlist.h  fileio.h  gline.h  handlers.h  hash.h  hook.h  hostmask.h  id.h  inet_misc.h  ipcache.h  irc_getaddrinfo.h  irc_getnameinfo.h  irc_res.h  irc_reslib.h  (+61 more)
lib/: Makefile.in
libio/: Makefile.in
libio/src/: Makefile.am  Makefile.in  address.c  address.h  base32.c  base32.h  comm.c  comm.h  comm_epoll.c  comm_kqueue.c  comm_poll.c  dbuf.c  dbuf.h  event.c  event.h  fdlist.c  fdlist.h  hook.c  hook.h  io.h  io_getopt.c  io_getopt.h  io_pidfile.c  io_pidfile.h  io_rlimit.c  io_rlimit.h  io_signal.c  io_signal.h  io_time.c  io_time.h  irc_string.c  irc_string.h  ircd_getopt.h  list.c  list.h  log.c  log.h  match.c  memory.c  memory.h  (+18 more)
libltdl/: Makefile.am  Makefile.in  README  argz.c  lt__alloc.c  lt__argz.c  lt__dirent.c  lt__strl.c  lt_dlloader.c  lt_error.c  ltdl.c  ltdl.h  slist.c
m4/: argz.m4  ax_arg_disable_mempool.m4  ax_arg_enable_assert.m4  ax_arg_enable_debugging.m4  ax_arg_enable_efence.m4  ax_arg_enable_warnings.m4  ax_arg_gnutls.m4  ax_arg_ioloop_mechanism.m4  ax_arg_libgeoip.m4  ax_arg_openssl.m4  ax_arg_with_tls.m4  ax_arg_wolfssl.m4  ax_check_openssl.m4  ax_define_build_date.m4  ax_define_dir.m4  ax_gcc_stack_protect.m4  ax_library_net.m4  ax_mempool_chunksizes.m4  ax_with_tls.m4  gcc_stack_protect.m4  ltargz.m4  ltdl.m4
messages/: Makefile.am  Makefile.in  README  ayb.lang  custom.lang  ircd-brazilian_pt.lang  ircd-bulgarian.lang  ircd-croatian.lang  ircd-danish.lang  ircd-dutch.lang  ircd-french.lang  ircd-german.lang  ircd-italian.lang  ircd-norwegian.lang  ircd-polish.lang  ircd-romanian.lang  ircd-russian.lang  ircd-spanish.lang  ircd-standard.example.lang  ircd-swedish.lang
modules/: Makefile.am  Makefile.in  cap_account_notify.c  cap_away_notify.c  cap_cap_notify.c  cap_chghost.c  cap_extended_join.c  cap_invite_notify.c  cap_multi_prefix.c  cap_userhost_in_names.c  m_accept.c  m_admin.c  m_away.c  m_bmask.c  m_cap.c  m_capab.c  m_cburst.c  m_certfp.c  m_challenge.c  m_close.c  m_connect.c  m_cryptlink.c  m_die.c  m_dline.c  m_drop.c  m_encap.c  m_eob.c  m_error.c  m_etrace.c  m_gline.c  m_globops.c  m_hash.c  m_help.c  m_info.c  m_invite.c  m_ison.c  m_join.c  m_kick.c  m_kill.c  m_kline.c  (+100 more)
modules/core/: Makefile.am  Makefile.in  m_bmask.c  m_die.c  m_error.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_mlock.c  m_mode.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_sjoin.c  m_squit.c  m_tmode.c
modules/extra/: Makefile.am  Makefile.in  m_opme.c
servlink/: Makefile.am  Makefile.in  README  TODO  control.c  control.h  io.c  io.h  servlink.c  servlink.h
src/: Makefile.am  Makefile.in  accept.c  accept.h  aline.c  aline.h  auth.c  auth.h  balloc.c  base32.c  cap.c  cap.h  channel.c  channel.h  channel_invite.c  channel_invite.h  channel_mode.c  channel_mode.h  client.c  client.h  client_svstag.c  client_svstag.h  cloak.c  cloak.h  command.c  command.h  conf.c  conf.h  conf_class.c  conf_class.h  conf_cluster.c  conf_cluster.h  conf_db.c  conf_db.h  conf_gecos.c  conf_gecos.h  conf_lexer.c  conf_lexer.l  conf_parser.c  conf_parser.h  (+148 more)
tools/: Makefile.am  Makefile.in  README  README.mkpasswd  README.respond  encspeed.c  mkkeypair  mkpasswd.c  respond.c  untabify
tools/rsa_respond/: Makefile.in  README  configure  configure.ac  respond.c
tools/win32/: kill.c  rehash.c  remotd.c
(+48 files in other folders)
