AUTOMAKE_OPTIONS = foreign

helpfdir = $(pkgdatadir)/help

dist_helpf_DATA = accept    \
                  admin     \
                  away      \
                  capab     \
                  challenge \
                  close     \
                  cmode     \
                  connect   \
                  die       \
                  dline     \
                  eob       \
                  error     \
                  etrace    \
                  gline     \
                  gungline  \
                  hash      \
                  help      \
                  index     \
                  info      \
                  invite    \
                  ison      \
                  join      \
                  kick      \
                  kill      \
                  kline     \
                  knock     \
                  links     \
                  list      \
                  locops    \
                  lusers    \
                  map       \
                  module    \
                  motd      \
                  names     \
                  nick      \
                  notice    \
                  oper      \
                  part      \
                  pass      \
                  ping      \
                  pong      \
                  post      \
                  privmsg   \
                  quit      \
                  rehash    \
                  restart   \
                  resv      \
                  server    \
                  set       \
                  sjoin     \
                  squit     \
                  stats     \
                  svinfo    \
                  time      \
                  topic     \
                  trace     \
                  umode     \
                  undline   \
                  unkline   \
                  unresv    \
                  unxline   \
                  user      \
                  userhost  \
                  version   \
                  wallops   \
                  who       \
                  whois     \
                  whowas    \
                  xline

helpf: $(dist_helpf_DATA)
