AUTOMAKE_OPTIONS = foreign
messagesdir = $(pkgdatadir)/messages

dist_messages_DATA = ayb.lang               \
                     custom.lang            \
                     ircd-brazilian_pt.lang \
                     ircd-bulgarian.lang    \
                     ircd-croatian.lang     \
                     ircd-danish.lang       \
                     ircd-dutch.lang        \
                     ircd-french.lang       \
                     ircd-german.lang       \
                     ircd-italian.lang      \
                     ircd-norwegian.lang    \
                     ircd-polish.lang       \
                     ircd-romanian.lang     \
                     ircd-russian.lang      \
                     ircd-spanish.lang      \
                     ircd-swedish.lang

messages: $(dist_messages_DATA)
