AUTOMAKE_OPTIONS = foreign
MODULE_FLAGS = -module -avoid-version

AM_CPPFLAGS = -I$(top_srcdir)/libio/src -I$(top_srcdir)/src
modulesdir = $(pkglibdir)/modules

modules_LTLIBRARIES = m_accept.la     \
                      m_admin.la      \
                      m_away.la       \
                      m_bmask.la      \
                      m_cap.la        \
                      m_capab.la      \
                      m_certfp.la     \
                      m_close.la      \
                      m_connect.la    \
                      m_die.la        \
                      m_dline.la      \
                      m_encap.la      \
                      m_eob.la        \
                      m_error.la      \
                      m_etrace.la     \
                      m_globops.la    \
                      m_hash.la       \
                      m_help.la       \
                      m_info.la       \
                      m_invite.la     \
                      m_ison.la       \
                      m_join.la       \
                      m_kick.la       \
                      m_kill.la       \
                      m_kline.la      \
                      m_knock.la      \
                      m_links.la      \
                      m_list.la       \
                      m_locops.la     \
                      m_lusers.la     \
                      m_map.la        \
                      m_message.la    \
                      m_metadata.la   \
                      m_mlock.la      \
                      m_mode.la       \
                      m_module.la     \
                      m_monitor.la    \
                      m_motd.la       \
                      m_names.la      \
                      m_nick.la       \
                      m_oper.la       \
                      m_opme.la       \
                      m_part.la       \
                      m_pass.la       \
                      m_ping.la       \
                      m_pong.la       \
                      m_post.la       \
                      m_quit.la       \
                      m_rehash.la     \
                      m_restart.la    \
                      m_resv.la       \
                      m_resync.la     \
                      m_server.la     \
                      m_set.la        \
                      m_sjoin.la      \
                      m_squit.la      \
                      m_stats.la      \
                      m_svinfo.la     \
                      m_svsaccount.la \
                      m_svshost.la    \
                      m_svsjoin.la    \
                      m_svskill.la    \
                      m_svsmode.la    \
                      m_svsnick.la    \
                      m_svspart.la    \
                      m_svstag.la     \
                      m_tburst.la     \
                      m_time.la       \
                      m_tmode.la      \
                      m_topic.la      \
                      m_trace.la      \
                      m_undline.la    \
                      m_unkline.la    \
                      m_unresv.la     \
                      m_unxline.la    \
                      m_user.la       \
                      m_userhost.la   \
                      m_version.la    \
                      m_webirc.la     \
                      m_who.la        \
                      m_whois.la      \
                      m_whowas.la     \
                      m_xline.la

m_accept_la_LDFLAGS = $(MODULE_FLAGS)
m_admin_la_LDFLAGS = $(MODULE_FLAGS)
m_away_la_LDFLAGS = $(MODULE_FLAGS)
m_bmask_la_LDFLAGS = $(MODULE_FLAGS)
m_cap_la_LDFLAGS = $(MODULE_FLAGS)
m_capab_la_LDFLAGS = $(MODULE_FLAGS)
m_certfp_la_LDFLAGS = $(MODULE_FLAGS)
m_close_la_LDFLAGS = $(MODULE_FLAGS)
m_connect_la_LDFLAGS = $(MODULE_FLAGS)
m_die_la_LDFLAGS = $(MODULE_FLAGS)
m_dline_la_LDFLAGS = $(MODULE_FLAGS)
m_encap_la_LDFLAGS = $(MODULE_FLAGS)
m_eob_la_LDFLAGS = $(MODULE_FLAGS)
m_error_la_LDFLAGS = $(MODULE_FLAGS)
m_etrace_la_LDFLAGS = $(MODULE_FLAGS)
m_globops_la_LDFLAGS = $(MODULE_FLAGS)
m_hash_la_LDFLAGS = $(MODULE_FLAGS)
m_help_la_LDFLAGS = $(MODULE_FLAGS)
m_info_la_LDFLAGS = $(MODULE_FLAGS)
m_invite_la_LDFLAGS = $(MODULE_FLAGS)
m_ison_la_LDFLAGS = $(MODULE_FLAGS)
m_join_la_LDFLAGS = $(MODULE_FLAGS)
m_kick_la_LDFLAGS = $(MODULE_FLAGS)
m_kill_la_LDFLAGS = $(MODULE_FLAGS)
m_kline_la_LDFLAGS = $(MODULE_FLAGS)
m_knock_la_LDFLAGS = $(MODULE_FLAGS)
m_links_la_LDFLAGS = $(MODULE_FLAGS)
m_list_la_LDFLAGS = $(MODULE_FLAGS)
m_locops_la_LDFLAGS = $(MODULE_FLAGS)
m_lusers_la_LDFLAGS = $(MODULE_FLAGS)
m_map_la_LDFLAGS = $(MODULE_FLAGS)
m_message_la_LDFLAGS = $(MODULE_FLAGS)
m_metadata_la_LDFLAGS = $(MODULE_FLAGS)
m_mlock_la_LDFLAGS = $(MODULE_FLAGS)
m_mode_la_LDFLAGS = $(MODULE_FLAGS)
m_module_la_LDFLAGS = $(MODULE_FLAGS)
m_monitor_la_LDFLAGS = $(MODULE_FLAGS)
m_motd_la_LDFLAGS = $(MODULE_FLAGS)
m_names_la_LDFLAGS = $(MODULE_FLAGS)
m_nick_la_LDFLAGS = $(MODULE_FLAGS)
m_oper_la_LDFLAGS = $(MODULE_FLAGS)
m_opme_la_LDFLAGS = $(MODULE_FLAGS)
m_part_la_LDFLAGS = $(MODULE_FLAGS)
m_pass_la_LDFLAGS = $(MODULE_FLAGS)
m_ping_la_LDFLAGS = $(MODULE_FLAGS)
m_pong_la_LDFLAGS = $(MODULE_FLAGS)
m_post_la_LDFLAGS = $(MODULE_FLAGS)
m_quit_la_LDFLAGS = $(MODULE_FLAGS)
m_rehash_la_LDFLAGS = $(MODULE_FLAGS)
m_restart_la_LDFLAGS = $(MODULE_FLAGS)
m_resv_la_LDFLAGS = $(MODULE_FLAGS)
m_resync_la_LDFLAGS = $(MODULE_FLAGS)
m_server_la_LDFLAGS = $(MODULE_FLAGS)
m_set_la_LDFLAGS = $(MODULE_FLAGS)
m_sjoin_la_LDFLAGS = $(MODULE_FLAGS)
m_squit_la_LDFLAGS = $(MODULE_FLAGS)
m_stats_la_LDFLAGS = $(MODULE_FLAGS)
m_svinfo_la_LDFLAGS = $(MODULE_FLAGS)
m_svsaccount_la_LDFLAGS = $(MODULE_FLAGS)
m_svshost_la_LDFLAGS = $(MODULE_FLAGS)
m_svsjoin_la_LDFLAGS = $(MODULE_FLAGS)
m_svskill_la_LDFLAGS = $(MODULE_FLAGS)
m_svsmode_la_LDFLAGS = $(MODULE_FLAGS)
m_svsnick_la_LDFLAGS = $(MODULE_FLAGS)
m_svspart_la_LDFLAGS = $(MODULE_FLAGS)
m_svstag_la_LDFLAGS = $(MODULE_FLAGS)
m_tburst_la_LDFLAGS = $(MODULE_FLAGS)
m_time_la_LDFLAGS = $(MODULE_FLAGS)
m_tmode_la_LDFLAGS = $(MODULE_FLAGS)
m_topic_la_LDFLAGS = $(MODULE_FLAGS)
m_trace_la_LDFLAGS = $(MODULE_FLAGS)
m_undline_la_LDFLAGS = $(MODULE_FLAGS)
m_unkline_la_LDFLAGS = $(MODULE_FLAGS)
m_unresv_la_LDFLAGS = $(MODULE_FLAGS)
m_unxline_la_LDFLAGS = $(MODULE_FLAGS)
m_user_la_LDFLAGS = $(MODULE_FLAGS)
m_userhost_la_LDFLAGS = $(MODULE_FLAGS)
m_version_la_LDFLAGS = $(MODULE_FLAGS)
m_webirc_la_LDFLAGS = $(MODULE_FLAGS)
m_who_la_LDFLAGS = $(MODULE_FLAGS)
m_whois_la_LDFLAGS = $(MODULE_FLAGS)
m_whowas_la_LDFLAGS = $(MODULE_FLAGS)
m_xline_la_LDFLAGS = $(MODULE_FLAGS)

m_accept_la_SOURCES = m_accept.c
m_admin_la_SOURCES = m_admin.c
m_away_la_SOURCES = m_away.c
m_bmask_la_SOURCES = m_bmask.c
m_cap_la_SOURCES = m_cap.c
m_capab_la_SOURCES = m_capab.c
m_certfp_la_SOURCES = m_certfp.c
m_close_la_SOURCES = m_close.c
m_connect_la_SOURCES = m_connect.c
m_die_la_SOURCES = m_die.c
m_dline_la_SOURCES = m_dline.c
m_encap_la_SOURCES = m_encap.c
m_eob_la_SOURCES = m_eob.c
m_error_la_SOURCES = m_error.c
m_etrace_la_SOURCES = m_etrace.c
m_globops_la_SOURCES = m_globops.c
m_hash_la_SOURCES = m_hash.c
m_help_la_SOURCES = m_help.c
m_info_la_SOURCES = m_info.c
m_invite_la_SOURCES = m_invite.c
m_ison_la_SOURCES = m_ison.c
m_join_la_SOURCES = m_join.c
m_kick_la_SOURCES = m_kick.c
m_kill_la_SOURCES = m_kill.c
m_kline_la_SOURCES = m_kline.c
m_knock_la_SOURCES = m_knock.c
m_links_la_SOURCES = m_links.c
m_list_la_SOURCES = m_list.c
m_locops_la_SOURCES = m_locops.c
m_lusers_la_SOURCES = m_lusers.c
m_map_la_SOURCES = m_map.c
m_message_la_SOURCES = m_message.c
m_metadata_la_SOURCES = m_metadata.c
m_mlock_la_SOURCES = m_mlock.c
m_mode_la_SOURCES = m_mode.c
m_module_la_SOURCES = m_module.c
m_monitor_la_SOURCES = m_monitor.c
m_motd_la_SOURCES = m_motd.c
m_names_la_SOURCES = m_names.c
m_nick_la_SOURCES = m_nick.c
m_oper_la_SOURCES = m_oper.c
m_opme_la_SOURCES = m_opme.c
m_part_la_SOURCES = m_part.c
m_pass_la_SOURCES = m_pass.c
m_ping_la_SOURCES = m_ping.c
m_pong_la_SOURCES = m_pong.c
m_post_la_SOURCES = m_post.c
m_quit_la_SOURCES = m_quit.c
m_rehash_la_SOURCES = m_rehash.c
m_restart_la_SOURCES = m_restart.c
m_resv_la_SOURCES = m_resv.c
m_resync_la_SOURCES = m_resync.c
m_server_la_SOURCES = m_server.c
m_set_la_SOURCES = m_set.c
m_sjoin_la_SOURCES = m_sjoin.c
m_squit_la_SOURCES = m_squit.c
m_stats_la_SOURCES = m_stats.c
m_svinfo_la_SOURCES = m_svinfo.c
m_svsaccount_la_SOURCES = m_svsaccount.c
m_svshost_la_SOURCES = m_svshost.c
m_svsjoin_la_SOURCES = m_svsjoin.c
m_svskill_la_SOURCES = m_svskill.c
m_svsmode_la_SOURCES = m_svsmode.c
m_svsnick_la_SOURCES = m_svsnick.c
m_svspart_la_SOURCES = m_svspart.c
m_svstag_la_SOURCES = m_svstag.c
m_tburst_la_SOURCES = m_tburst.c
m_time_la_SOURCES = m_time.c
m_tmode_la_SOURCES = m_tmode.c
m_topic_la_SOURCES = m_topic.c
m_trace_la_SOURCES = m_trace.c
m_undline_la_SOURCES = m_undline.c
m_unkline_la_SOURCES = m_unkline.c
m_unresv_la_SOURCES = m_unresv.c
m_unxline_la_SOURCES = m_unxline.c
m_user_la_SOURCES = m_user.c
m_userhost_la_SOURCES = m_userhost.c
m_version_la_SOURCES = m_version.c
m_webirc_la_SOURCES = m_webirc.c
m_who_la_SOURCES = m_who.c
m_whois_la_SOURCES = m_whois.c
m_whowas_la_SOURCES = m_whowas.c
m_xline_la_SOURCES = m_xline.c

modules: $(modules_LTLIBRARIES)
